# termco-py

./: .flake8  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  pyproject.toml  setup.py
.github/workflows/: auto-release.yml  deb-package.yml  publish.yml  release.yml  test.yml
debian/: changelog  control  copyright  rules
debian/tests/: smoke
docs/: APT_RELEASE.md  RELEASE_NOTES.md
src/termcopy/: __init__.py  cli.py
tests/: test_cli.py
